CHATS_SIT/force-app/main/default/objects/T_FISCAL_SCH__c.object
<CustomObject>
    <fields>
        <fullName>CDE_RATE_TYPE__c</fullName>
        <description>Rate Type</description>
        <label>Rate Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00751</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delete_Button_Visibility__c</fullName>
        <formula>AND(
            OR( Is_Flow_Completed__c == false, RecordType.Name == &apos;Future&apos;),
            OR(
                TEXT(IDN_AGRMT_FISCAL__r.CDE_COUNTY__r.CDE_COUNTY__c) == TEXT($User.Owner_County__c),
                CONTAINS(&apos;;&apos; &amp; $User.Common_County_Text__c &amp; &apos;;&apos;, &apos;;&apos; &amp; TEXT(IDN_AGRMT_FISCAL__r.CDE_COUNTY__r.CDE_COUNTY__c) &amp; &apos;;&apos;) ,         
                $Permission.System_Administrator
            )
            )</formula>
        <label>Delete Button Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>Effective Begin Date</description>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <description>Effective End Date</description>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_AGRMT_FISCAL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fiscal Agreement</description>
        <label>Fiscal Agreement</label>
        <referenceTo>T_PROVR_FISCAL_AGREMENT__c</referenceTo>
        <relationshipLabel>Rate Schedules</relationshipLabel>
        <relationshipName>Rate_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Rate Schedule ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Flow_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Flow Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Id__c</fullName>
        <formula>CASESAFEID( IDN_AGRMT_FISCAL__r.ID_SERVICE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXT_CHATS_RATING__c</fullName>
        <label>Rate Schedule Quality Rating</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Rate Schedules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Schedules</pluralLabel>
    <recordTypes>
        <fullName>Future</fullName>
        <active>true</active>
        <label>Future</label>
    </recordTypes>
    <recordTypes>
        <fullName>Past</fullName>
        <active>true</active>
        <label>Past</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_End_Date_Greater_than_Begin</fullName>
        <active>true</active>
        <description>Effective End Date must be greater than Effective Begin Date.</description>
        <errorConditionFormula>AND(DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c , NOT(ISBLANK(DTE_END_EFFV__c )))</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
    </validationRules>
</CustomObject>