CHATS_SIT/force-app/main/default/objects/T_FISCAL_SCH__c/validationRules/Effective_End_Date_Greater_than_Begin.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_End_Date_Greater_than_Begin</fullName>
    <active>true</active>
    <description>Effective End Date must be greater than Effective Begin Date.</description>
    <errorConditionFormula>AND(DTE_BEGIN_EFFV__c &gt; DTE_END_EFFV__c , NOT(ISBLANK(DTE_END_EFFV__c )))</errorConditionFormula>
    <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
    <errorMessage>Effective End Date must be greater than Effective Begin Date.</errorMessage>
</ValidationRule>