CHATS_SIT/force-app/main/default/objects/T_FISCAL_SCH__c/listViews/Datafix_view.listView-meta.xml
<ListView>
    <fullName>Datafix_view</fullName>
    <columns>NAME</columns>
    <columns>DTE_BEGIN_EFFV__c</columns>
    <columns>DTE_END_EFFV__c</columns>
    <columns>IDN_AGRMT_FISCAL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DTE_BEGIN_EFFV__c</field>
        <operation>greaterThan</operation>
        <value>9/1/2024</value>
    </filters>
    <label>Datafix view</label>
</ListView>